# finance-tweet-analyzer

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  alembic.ini  celerybeat-schedule.bak  celerybeat-schedule.dir  pyproject.toml  test_output.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_blogger_twitter_meta.py  0003_user_preferences.py  0004_user_profile.py  0005_conversations_messages.py  0006_users.py  0007_agent_traces.py  0008_documents.py  0009_tracked_tickers_reports.py  0010_search_vector.py  0011_es_index_jobs.py  0012_index_jobs_and_drop_search_vector.py  3f3258d837fe_add_blogger_fetch_fields.py  40121ffe36bc_add_prediction_status_to_analysis_.py  955d8bfe0d9e_partial_unique_index_documents_user_hash.py  a13c9f42b801_personal_saas_resource_boundary.py  c7b6e2d9f104_remove_memory_user_defaults.py
app/: celery_app.py  main.py
app/agents/: analysis_agent.py  chat_agent.py  llm.py  prediction_agent.py  report_agent.py  risk_agent.py  self_query_agent.py  signal_agent.py  sql_agent.py  supervisor.py
app/agents/chat/: __init__.py  observability.py  routing.py  tool_results.py
app/api/: admin_es.py  admin_traces.py  analysis.py  auth.py  bloggers.py  chat.py  dashboard.py  debug.py  documents.py  me.py  predictions.py  reports.py  router.py  signals.py  tracking.py  tweets.py
app/core/: access_log.py  auth.py  config.py  database_guard.py  deps.py  logging.py  rate_limit.py  resilience.py  tracing.py
app/memory/: __init__.py  checkpointer.py  compression.py  identity.py  mem0_client.py  preferences.py  profile.py
app/middleware/: content_filter.py
app/models/: __init__.py  agent_trace.py  analysis.py  analysis_job.py  base.py  blogger.py  conversation.py  doc_chunk.py  document.py  es_index_job.py  index_job.py  message.py  prediction.py  report.py  tracked_ticker.py  tweet.py  user.py  user_blogger_follow.py  user_preference.py  user_profile.py  user_tweet_bookmark.py
app/prompts/: __init__.py  loader.py
app/rag/: chunking.py  embeddings.py  fusion.py  keyword_store.py  repository.py  reranker.py  storage.py  tokenizer.py  vector_store.py
app/rag/parsers/: __init__.py  base.py  desc_extractor.py  docx_parser.py  markdown_parser.py  paste_parser.py  pdf_parser.py  url_parser.py
app/rag/retrievers/: __init__.py  analysis_retriever.py  bm25_retriever.py  document_retriever.py  structured_retriever.py  tweet_retriever.py
app/scheduler/: __init__.py  locks.py  tasks.py
app/schemas/: admin_traces.py  blogger.py  chat.py  dashboard.py  document.py  me.py  prediction.py  report.py  routing.py  signal.py  tracking.py  tweet.py
app/scripts/: __init__.py  create_es_rag_index.py  es_rag_index_plan.py
app/services/: admin_trace_service.py  analysis_job_service.py  analysis_service.py  auth_service.py  blogger_context.py  blogger_service.py  conversation_service.py  credibility.py  document_service.py  prediction_service.py  report_service.py  report_streaming.py  trace_service.py  tracking_service.py  tweet_service.py  twitter_service.py  user_resource_service.py
docs/: personal-saas.md
docs/superpowers/plans/: 2026-05-26-finance-tweet-analyzer.md  2026-06-01-multi-user-chat.md  (+4 more)
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
prompts/: analysis.yaml  chat.yaml  memory.yaml  report.yaml  risk.yaml  self_query.yaml  signal.yaml  sql.yaml  supervisor.yaml
scripts/: clear_doc_chunks.py  compare_chunking.py  dashscope_embeddings.py  eval_chunking_real.py  manage.sh  repro_blogger_filter.py  repro_retrievers.py  reset_data.py  seed_tweets.py  tweets_export.json  twitter_crawler.py
tests/: conftest.py  test_chat_endpoint.py  test_conversation_crud.py  test_tweet_import.py
tests/integration/: test_documents_api.py  test_memory_identity_migration.py  test_personal_saas_boundaries.py
tests/unit/: conftest.py  test_test_database_config.py
(+113 files in other folders)
