[project]
name = "finance-tweet-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "apscheduler>=3.10.0,<4.0",
    "bcrypt>=5.0.0",
    "bs4>=0.0.2",
    "cachetools>=6.0.0",
    "celery>=5.6.3",
    "chromadb>=1.0.0",
    "cohere>=5.21.1",
    "curl-cffi>=0.15.0",
    "dashscope>=1.20.0",
    "docx>=0.2.4",
    "docx2txt>=0.9",
    "fastapi>=0.115.0",
    "flask>=3.1.3",
    "flower>=2.0.1",
    "gne>=0.4.3",
    "gradio>=6.14.0",
    "grandalf>=0.8",
    "httpx>=0.28.0",
    "jieba>=0.42.1",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-chroma>=1.1.0",
    "langchain-cohere>=0.5.1",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.11",
    "langchain-openrouter>=0.2.1",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-redis>=0.4.1",
    "langgraph-cli[inmem]>=0.4.21",
    "langsmith>=0.7.22",
    "lark>=1.3.1",
    "loguru>=0.7.3",
    "mcp>=1.26.0",
    "mem0ai>=2.0.6",
    "mongoengine>=0.29.3",
    "numexpr>=2.14.1",
    "numpy>=2.0.0",
    "openai>=2.0.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary,pool]>=3.2.0",
    "pyarrow==22.0.0",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.10.0",
    "pymilvus>=2.6.0",
    "pymongo>=4.16.0",
    "pymysql>=1.1.3",
    "pypdf>=6.10.2",
    "pypinyin>=0.55.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "redis>=7.4.0",
    "requests>=2.32.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.0",
    "sqlglot>=30.8.0",
    "sse-starlette>=2.0.0",
    "tiktoken>=0.7.0",
    "trafilatura>=1.12.0",
    "unstructured>=0.18.32",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
